yyamamoto+sesetup@salesforce.com/src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>契約種別</label>
        <picklist>
            <picklistValues>
                <fullName>法人顧問契約</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>受任契約</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>月額顧問契約料金</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>顧問契約初期費用</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>x01</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>01. すべての有効契約</label>
    </listViews>
    <listViews>
        <fullName>x02</fullName>
        <filterScope>Everything</filterScope>
        <label>02. すべての契約</label>
    </listViews>
    <listViews>
        <fullName>x03</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>03. すべてのドラフト契約</label>
    </listViews>
    <listViews>
        <fullName>x04</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>04. すべての承認処理中契約</label>
    </listViews>
    <listViews>
        <fullName>x05</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>05. 私の有効契約</label>
    </listViews>
    <listViews>
        <fullName>x06</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>06. 私のドラフト契約</label>
    </listViews>
    <listViews>
        <fullName>x07</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>07. 私の承認処理中契約</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>